k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: brohjoe1-dev
  labels:
    app: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: plaintext
  - port: 9093
    targetPort: 9093
    protocol: TCP
    name: controller
