k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personnel-tracker
  namespace: brohjoe1-dev
  labels:
    app: personnel-tracker
spec:
  selector:
    app: personnel-tracker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
